--- a/hobbies.html
+++ b/hobbies.html
@@ -39,6 +39,11 @@
                 <li>Questa Notte</li>
             </ol>
         </ul>
+        <li><a href="photography.html">Photography</a></li>
+        <ul style="list-style-type:circle">
+        <li>An old hobby of mine</li>
+        <li>I love taking photos and creating cool effects using software</li>
+        </ul>
     </ul>
     <h3><a href="index.html">Home</a>
 </body>
