--- a/index.html
+++ b/index.html
@@ -57,13 +57,19 @@
         <ul style="list-style-type:circle">
             <li>Honor Society</li>
             <li>Academy Honors</li>
-            <li>2008 Soccer State Champion</li>
-            <li>2010 District Track and Field Titleist, 800m, 4x400m</li>
+            <li><a href="soccerChamp.html">2008 Soccer State Champion</a></li>
+            <li><a href="track.html">2010 District Track and Field Titleist</a>, 800m, 4x400m</li>
         </ul>
     </ul>
     <h3><a href="hobbies.html">Hobbies</a></h3>
     <hr size="3" color=#000000>
     <h3><a href="contact.html">Contact Info</a></h3>
+
+    <hr size="3" color=#000000>
+    <h3>Miscellaneous</h3>
+    <p><a href="https://www.youtube.com/watch?v=z46DixO5QH0" target="_blank">Gaming</a></p>
+    <p><a href="splash.html">Super Splash!</p>
+
 </body>
 
 </html>
