--- a/knowledge.html
+++ b/knowledge.html
@@ -47,6 +47,8 @@
 <a href="https://web.archive.org/" target="_blank">Web Archives</a>
 <br>
 <a href=https://web.archive.org/web/19990427094925/http://www.google.com/ target="_blank"> Google Beta Version</a>
+<br><br>
+More useful sites:
 <br>
 <a href="https://docs.microsoft.com/en-us/visualstudio/ide/default-keyboard-shortcuts-in-visual-studio?adlt=strict&toWww=1&redig=CD0E13D54D1948878724D970B3B5B2EB&view=vs-2022"
     target="_blank"> Keyboard Shortcuts in VS</a> (my favorite is auto format: shift + alt + f)
