--- a/skills.html
+++ b/skills.html
@@ -40,7 +40,7 @@
                 <td>
                     <table cellpadding="8">
                         <tr>
-                            <td>Soccer</td>
+                            <td><a href="https://www.youtube.com/watch?v=d5IVzSggIC4" target="_blank">Soccer</a></td>
                             <td>★★★★★</td>
                         </tr>
                         <tr>
@@ -48,15 +48,22 @@
                             <td>★★★☆☆</td>
                         </tr>
                         <tr>
-                            <td>Piano</td>
-                            <td>★★★☆☆</td>
-                        </tr>
-                        <tr>
-                            <td>Graphic Design</td>
+                            <td><a href="https://www.youtube.com/watch?v=1TADgzcQ-g8" target="_blank">Piano</a></td>
                             <td>★★★★☆</td>
                         </tr>
                         <tr>
-                            <td>Gaming</td>
+                            <td><a href="graphicDesign.html">Graphic Design</a></td>
+                            <td>★★★★☆</td>
+                        </tr>
+                        <tr>
+                            <td>Website Building 
+                                <a href="https://www.sunnyriverfarm.com/?adlt=strict&toWww=1&redig=109F6F45AB424A36963C6005A9B6E771"
+                                    target="_blank">(example)</a>
+                            </td>
+                            <td>★★★☆☆</td>
+                        </tr>
+                        <tr>
+                            <td><a href="photography.html">Photography</a></td>
                             <td>★★★★☆</td>
                         </tr>
                     </table>
