--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <hr size="3" color=#000000>
     <h3>Miscellaneous</h3>
     <p><a href="https://www.youtube.com/watch?v=z46DixO5QH0" target="_blank">Gaming</a></p>
-    <p><a href="splash.html">Super Splash!</p>
+    <p><a href="splash.html">Super Splashes!</p>
 
 </body>
 
