--- a/graphicDesign.html
+++ b/graphicDesign.html
@@ -18,6 +18,9 @@
     <h3>Photoshop Project</h3>
     <h4>(My younger brother as the subject)</h4>
     <img src="images/photoshop.jpg">
+    
+    <hr size="3" color="#000000">
+    <h3><a href="index.html">Home</a>
 </body>
 
 </html>
