--- a/hobbies.html
+++ b/hobbies.html
@@ -45,7 +45,10 @@
         <li>I love taking photos and creating cool effects using software</li>
         </ul>
     </ul>
+
+    <hr size="3" color="#000000">
     <h3><a href="index.html">Home</a>
+        
 </body>
 </html>
 
