--- a/impossibleDominoes.html
+++ b/impossibleDominoes.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <img src="images/4x400m.jpg">
-    <p>4x400m Relay Champions! (I'm the top right)</p>
-    <img src="images/districtWin.jpg">
-    <p>800m Victory! Very Close Call! (I'm in blue)</p>
+    <h2>Impossible Dominoes</h2>
+    <hr size="3" color="#000000">
+    <img src="images/impossibleDomino.jpg">
+    <img src="images/impossibleDomino2.jpg">
 
     <hr size="3" color="#000000">
     <h3><a href="index.html">Home</a>
-        
+
 </body>
+
 </html>
