--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h3>Miscellaneous</h3>
     <p><a href="https://www.youtube.com/watch?v=z46DixO5QH0" target="_blank">Gaming</a></p>
     <p><a href="splash.html">Super Splashes!</p>
-
+    <p><a href="travel.html">Travels</a></p>
 </body>
 
 </html>
