--- a/soccerChamp.html
+++ b/soccerChamp.html
@@ -13,5 +13,8 @@
     <p>The team!</p>
     <img src="images/stateMatch.jpg">
     <p>The battle!</p>
+
+    <hr size="3" color="#000000">
+    <h3><a href="index.html">Home</a>
 </body>
 </html>
