--- a/travel.html
+++ b/travel.html
@@ -7,13 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="images/4x400m.jpg">
-    <p>4x400m Relay Champions! (I'm the top right)</p>
-    <img src="images/districtWin.jpg">
-    <p>800m Victory! Very Close Call! (I'm in blue)</p>
+
+    <h2>Travels</h2>
+    <h3>Rome</h3>
+    <img src="images/romeCrew.jpg">
+    <p>The Crew!</p>
+    <img src="images/rome.jpg">
+    <p>Saint Peter's Square!</p>
+    <h3>Mexico</h3>
+    <img src="images/mexico.jpg">
+    <p>Near the Basillica of Our Lady of Guadalupe</p>
 
     <hr size="3" color="#000000">
     <h3><a href="index.html">Home</a>
-        
+
 </body>
 </html>
