--- a/work.html
+++ b/work.html
@@ -36,6 +36,7 @@
         <tfoot>
         </tfoot>
     </table>
+    <hr size="3" color="#000000">
     <h3><a href="index.html">Home</a>
 </body>
 </html>
