--- a/photography.html
+++ b/photography.html
@@ -16,5 +16,8 @@
     <img src="images/coolPhoto1.jpg">
     <h3>Long Exposure Shot with Fun Light Trick</h3>
     <img src="images/LongExposure.jpg">
+
+    <hr size="3" color="#000000">
+    <h3><a href="index.html">Home</a>
 </body>
 </html>
