--- a/splash.html
+++ b/splash.html
@@ -13,5 +13,9 @@
     <h2>Super Splash 2</h2>
     <p>Splash Zone!</p>
     <video controls width="300"><source src="video/video2.mp4" type="video/mp4"></video>
+    
+    <hr size="3" color="#000000">
+    <h3><a href="index.html">Home</a>
+        
 </body>
 </html>
