--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+Joey McMahon
+7-4-22
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,12 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Joey's amazing personal website">
     <title>Joey's Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 
 <body>
     <table cellspacing="15">
         <tr>
-            <td><img src="images/profilePicCircle2.jpg" alt="Joey's Profile Picture"></td>
+            <td><img src="images/profilePicCircle3.png" alt="Joey's Profile Picture"></td>
             <td>
                 <h2>Joey McMahon</h2>
                 <strong> <em> B.S CS,
@@ -41,15 +48,15 @@
         myself a good job as a web developer. I look forward to having an exciting career and seeing where it
         takes me.
     </p>
-    <hr size="3" color=#000000>
+    <hr>
     <h3><a href="work.html">Work Experience</a></h3>
 
     <h3><a href="skills.html">Skills</a></h3>
 
-   
     <h3>UDEMY Course Work</h3>
     <ul style="list-style-type:disc">
         <li>My Full Stack Knowledge Base: <a href="knowledge.html">Review Material</a></li>
+        <li><a href="C:\Users\sejgn\Desktop\fullstack\html\projects\CSS - Bacon Fansite\index.html">Bacon Fansite</a></li>
     </ul>
     <h3>Other Education</h3>
     <ul style="list-style-type:disc">
@@ -62,12 +69,12 @@
         </ul>
     </ul>
     <h3><a href="hobbies.html">Hobbies</a></h3>
-    <hr size="3" color=#000000>
+    <hr>
     <h3><a href="contact.html">Contact Info</a></h3>
 
-    <hr size="3" color=#000000>
+    <hr>
     <h3>Miscellaneous</h3>
-    <p><a href="https://www.youtube.com/watch?v=z46DixO5QH0" target="_blank">Gaming</a></p>
+    <p><a href="https://www.youtube.com/watch?v=z46DixO5QH0" target="_blank">Gaming</a> (one of my captures)</p>
     <p><a href="splash.html">Super Splashes!</p>
     <p><a href="travel.html">Travels</a></p>
 </body>
