--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <li>Phone: (541)675-8007</li>
     </ul>
 
-    <hr size="3" color="#000000">
+    <hr>
 
     <form class="" action="mailto:joeymcm2019@gmail.com" method="post" enctype="text/plain">
         <table cellpadding="8">
@@ -49,7 +50,7 @@
         <br>
     </form>
 
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
 
 </body>
