--- a/graphicDesign.html
+++ b/graphicDesign.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <h2>Graphic Design</h2>
     <h3>A Few Examples</h3>
-    <hr size="3" color="#000000">
+    <hr>
     <h3>Sunny River Farm Logo</h3>
-    <img src="images/sunnyRiverFarmLogo.png">
-    <hr size="3" color="#000000">
+    <img src="images/srfLogo.png">
+    <hr>
     <h3>Photoshop Project</h3>
     <h4>(My younger brother as the subject)</h4>
     <img src="images/photoshop.jpg">
     
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
 </body>
 
