--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -46,9 +47,9 @@
         </ul>
     </ul>
 
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
-        
+
 </body>
 </html>
 
