--- a/impossibleDominoes.html
+++ b/impossibleDominoes.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <h2>Impossible Dominoes</h2>
-    <hr size="3" color="#000000">
+    <hr>
     <img src="images/impossibleDomino.jpg">
     <img src="images/impossibleDomino2.jpg">
 
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
 
 </body>
