--- a/splash.html
+++ b/splash.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h2>Super Splash (Slow Mo)</h2>
@@ -14,8 +15,8 @@
     <p>Splash Zone!</p>
     <video controls width="300"><source src="video/video2.mp4" type="video/mp4"></video>
     
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
-        
+
 </body>
 </html>
