--- a/track.html
+++ b/track.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <img src="images/4x400m.jpg">
@@ -12,8 +13,8 @@
     <img src="images/districtWin.jpg">
     <p>800m Victory! Very Close Call! (I'm in blue)</p>
 
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
-        
+
 </body>
 </html>
