--- a/travel.html
+++ b/travel.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -18,7 +19,7 @@
     <img src="images/mexico.jpg">
     <p>Near the Basillica of Our Lady of Guadalupe</p>
 
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
 
 </body>
