--- a/work.html
+++ b/work.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
+<style>
+
+</style>
 
 <body>
     <h3>Work Experience</h3>
@@ -36,7 +41,7 @@
         <tfoot>
         </tfoot>
     </table>
-    <hr size="3" color="#000000">
+    <hr>
     <h3><a href="index.html">Home</a>
 </body>
 </html>
