--- a/knowledge.html
+++ b/knowledge.html
@@ -283,17 +283,11 @@
     <br><br>
 
     In our style.css:<br>
-    h1:hover { <br>
-        color: "orange"; <br>
+    img:hover { <br>
+        background-color: "orange"; <br>
     } <br><br>
 
-    This code will make it so whenever we hover over an h1, it will change its color to orange.
-
-
-
-
-
-
+    This code will make it so whenever we hover over an img element, it will change its background color to orange.
 
     </p>
     
