--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Joey McMahon
     <h3>UDEMY Course Work</h3>
     <ul style="list-style-type:disc">
         <li>My Full Stack Knowledge Base: <a href="knowledge.html">Review Material</a></li>
-        <li><a href="C:\Users\sejgn\Desktop\fullstack\html\projects\CSS - Bacon Fansite\index.html">Bacon Fansite</a></li>
+        <li><a href="CSS - Bacon Fansite\index.html">Bacon Fansite</a></li>
     </ul>
     <h3>Other Education</h3>
     <ul style="list-style-type:disc">
