--- a/Site2/index.html
+++ b/Site2/index.html
@@ -32,8 +32,10 @@
             <img src="images/profilePicCircle3.png" alt="profile-pic-img">
             <h2>Hello</h2>
             <p class="p1">One thing to know about me: <strong><em>I want to become a full-stack
-                        webdeveloper.</em></strong>
-                I am currently pursuing this goal with the help of a course I found on Udemy.
+                        webdeveloper.</em></strong><br>
+                I am currently pursuing this goal with the help of a course on Udemy
+                (<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" 
+                target="_blank">course link</a>).
                 <hr>
             <div class="skills">
                 <h2>Skills</h2>
@@ -126,14 +128,14 @@
             <div class="contact-me">
                 <h2>Get In Touch</h2>
                 <p>Got something that I can help with, or just want to say hi? Go ahead and hit me up. </p>
-                <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+                <a class="btn" href="mailto:joeymcm2019@email.com">CONTACT ME</a>
             </div>
         </div>
         <hr>
 
 
         <div class="bottom">
-            <p>Want to see more about me? Check out my first website below. </p>
+            <p>Want to know more about me? Check out my first website below. </p>
             <a class="footer-link" href="C:\Users\sejgn\Desktop\fullstack\html\projects\personal site\index.html">First
                 Website</a>
             <p>© 2022 Joey McMahon.</p>
