--- a/Site2/index.html
+++ b/Site2/index.html
@@ -136,7 +136,7 @@
 
         <div class="bottom">
             <p>Want to know more about me? Check out my first website below. </p>
-            <a class="footer-link" href="\html\projects\personal site\index.html">First
+            <a class="footer-link" href="\index.html">First
                 Website</a>
             <p>© 2022 Joey McMahon.</p>
         </div>
