--- a/Site2/index.html
+++ b/Site2/index.html
@@ -17,16 +17,15 @@
 
     <div class="header">
         <h1>I'm Joey</h1><br>
-        <strong>a programmer</strong>
+        <strong id="strong1">a programmer</strong>
+        <br>
     </div>
     <div class="mountain">
-
-        <!--https://www.bing.com/images/search?view=detailV2&ccid=S9U9N9Al&id=2048A0D9160F02FFC8E45AB5BA485616FC4F1661&thid=OIP.S9U9N9AloPTwtAcVxK9E-wHaCx&mediaurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.4bd53d37d025a0f4f0b40715c4af44fb%3frik%3dYRZP%252fBZWSLq1Wg%26riu%3dhttp%253a%252f%252fpngimg.com%252fuploads%252fmountain%252fmountain_PNG22.png%26ehk%3djpN25eGwUZfaQ7tyLCywuHxiHkzHRZ5TTteNHrIW598%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=668&expw=1781&q=transparent+background+mountain+clipart&simid=607990854944979356&FORM=IRPRST&ck=6A479CA44C4B13388A1ABB5094DE0433&selectedIndex=94&adlt=strict&ajaxhist=0&ajaxserp=0-->
         <img src="images/cloud.png" class="cloud2" alt="cloud-img">
         <img src="images/mountain2.png" id="mountImg" alt="mountain-img">
         <img src="images/cloud.png" class="cloud" alt="cloud-img">
-
     </div>
+
     <div class="middle">
         <div>
             <img src="images/profilePicCircle3.png" alt="profile-pic-img">
@@ -34,12 +33,12 @@
             <p class="p1">One thing to know about me: <strong><em>I want to become a full-stack
                         webdeveloper.</em></strong><br>
                 I am currently pursuing this goal with the help of a course on Udemy
-                (<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" 
-                target="_blank">course link</a>).
+                (<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank">course
+                    link</a>).
                 <hr>
             <div class="skills">
                 <h2>Skills</h2>
-               <img src="images/coding.png" class="codeIMG">
+                <img src="images/coding.png" class="codeIMG">
                 <center>
                     <table>
                         <thead>
@@ -136,7 +135,7 @@
 
         <div class="bottom">
             <p>Want to know more about me? Check out my first website below. </p>
-            <a class="footer-link" href="/cv/index.html">First
+            <a class="footer-link" href="C:\Users\sejgn\Desktop\fullstack\html\projects\personal site\index.html">First
                 Website</a>
             <p>© 2022 Joey McMahon.</p>
         </div>
