--- a/Site2/index.html
+++ b/Site2/index.html
@@ -15,10 +15,13 @@
 
 <body>
 
-    <div class="header">
-        <h1>I'm Joey</h1><br>
-        <strong id="strong1">a programmer</strong>
-        <br>
+    <div class="top">
+        <!--custom kerning, unfortunately lol-->
+        <h1>I'</h1>
+        <h1 id="mKern">m</h1>
+        <h1>Joey</h1><br>
+        <h2>a programmer<h2>
+                <br>
     </div>
     <div class="mountain">
         <img src="images/cloud.png" class="cloud2" alt="cloud-img">
@@ -37,10 +40,11 @@
                     link</a>).
                 <hr>
             <div class="skills">
-                <h2>Skills</h2>
-                <img src="images/coding.png" class="codeIMG">
                 <center>
-                    <table>
+                <h2>Skills</h2>
+                
+                <img src="images/coding.png" class="codeIMG">
+                    <table class="table1">
                         <thead>
                         </thead>
                         <tr>
@@ -75,12 +79,12 @@
                         </tr>
                     </table>
                 </center>
-                <p>I used mainly C++ and Java in college. <br> However, in order to become a full-stack developer
-                    I've been focussing on html, javascript, and css. Looking to master these 3!
+                <p align="left">I used mainly C++ and Java in college. 
+                    I've been focussing on html, javascript, and css.
+                    Looking to master these 3!
                 </p>
                 <img src="images/soccerball.png" class="soccerIMG">
-                <center>
-                    <table>
+                    <table class="table2">
                         <td>
                             <table cellpadding="8">
                                 <tr>
@@ -117,11 +121,10 @@
                             </table>
                         </td>
                     </table>
-                </center>
-                <p>Outside of coding, my greatest skill is undoubtedly soccer. I've been playing since I was 6. <br>
-                    I love a good pick up game of soccer, but I also love competitive soccer <br>
+                <p align="left">Outside of coding, my greatest skill is undoubtedly soccer. 
+                    I've been playing since I was 6. 
+                    I love a good pick up game of soccer, but I also love competitive soccer.
                 </p>
-
             </div>
             <hr>
             <div class="contact-me">
@@ -130,15 +133,15 @@
                 <a class="btn" href="mailto:joeymcm2019@email.com">CONTACT ME</a>
             </div>
         </div>
-        <hr>
 
+    </div>
 
-        <div class="bottom">
-            <p>Want to know more about me? Check out my first website below. </p>
-            <a class="footer-link" href="/cv/index.html">First
-                Website</a>
-            <p>© 2022 Joey McMahon.</p>
-        </div>
+    <div class="bottom">
+        <p>Want to know more about me? Check out my <a class="footer-link"
+                href="C:\Users\sejgn\Desktop\fullstack\html\projects\personal site\index.html">First
+                Website</a>. </p>
+        <p>© 2022 Joey McMahon.</p>
+    </div>
 
 
 
