--- a/Site2/index.html
+++ b/Site2/index.html
@@ -138,7 +138,7 @@
 
     <div class="bottom">
         <p>Want to know more about me? Check out my <a class="footer-link"
-                href="C:\Users\sejgn\Desktop\fullstack\html\projects\personal site\index.html">First
+                href="/cv/index.html">First
                 Website</a>. </p>
         <p>© 2022 Joey McMahon.</p>
     </div>
