--- a/Site2/index.html
+++ b/Site2/index.html
@@ -78,11 +78,10 @@
                             </td>
                         </tr>
                     </table>
-                </center>
-                <p align="left">I used mainly C++ and Java in college. 
-                    I've been focussing on html, javascript, and css.
-                    Looking to master these 3!
-                </p>
+                    <p class="skillP1">I used mainly C++ and Java in college. 
+                        I've been focussing on html, javascript, and css.
+                        Looking to master these 3!
+                    </p>
                 <img src="images/soccerball.png" class="soccerIMG">
                     <table class="table2">
                         <td>
@@ -126,6 +125,7 @@
                     I love a good pick up game of soccer, but I also love competitive soccer.
                 </p>
             </div>
+        </center>
             <hr>
             <div class="contact-me">
                 <h2>Get In Touch</h2>
@@ -140,7 +140,7 @@
         <p>Want to know more about me? Check out my <a class="footer-link"
                 href="/cv/index.html">First
                 Website</a>. </p>
-        <p>© 2022 Joey McMahon.</p>
+        <p id="lastP">© 2022 Joey McMahon.</p>
     </div>
 
 
