--- a/Site2/index.html
+++ b/Site2/index.html
@@ -33,11 +33,13 @@
         <div>
             <img src="images/profilePicCircle3.png" alt="profile-pic-img">
             <h2>Hello</h2>
-            <p class="p1">One thing to know about me: <strong><em>I want to become a full-stack
+            <center>
+            <p class="skillP">One thing to know about me: <strong><em>I want to become a full-stack
                         webdeveloper.</em></strong><br>
                 I am currently pursuing this goal with the help of a course on Udemy
                 (<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank">course
                     link</a>).
+                </center>
                 <hr>
             <div class="skills">
                 <center>
@@ -49,7 +51,7 @@
                         </thead>
                         <tr>
                             <td>
-                                <table cellpadding="8">
+                                <table cellpadding="15">
                                     <tr>
                                         <td>HTML</td>
                                         <td>★★★★☆</td>
@@ -61,7 +63,7 @@
                                 </table>
                             </td>
                             <td>
-                                <table cellpadding="8">
+                                <table cellpadding="15">
                                     <tr>
                                         <td>CSS</td>
                                         <td>★★★☆☆</td>
@@ -78,14 +80,14 @@
                             </td>
                         </tr>
                     </table>
-                    <p class="skillP1">I used mainly C++ and Java in college. 
-                        I've been focussing on html, javascript, and css.
+                    <p class="skillP">I used mainly C++ and Java in college. 
+                        I've been focussing on html, javascript, and css.<br>
                         Looking to master these 3!
                     </p>
                 <img src="images/soccerball.png" class="soccerIMG">
                     <table class="table2">
                         <td>
-                            <table cellpadding="8">
+                            <table cellpadding="15">
                                 <tr>
                                     <td><a href="https://www.youtube.com/watch?v=d5IVzSggIC4" target="_blank">Soccer</a>
                                     </td>
@@ -103,7 +105,7 @@
                             </table>
                         </td>
                         <td>
-                            <table cellpadding="8">
+                            <table cellpadding="15">
                                 <tr>
                                     <td><a href="graphicDesign.html">Graphic Design</a></td>
                                     <td>★★★★☆</td>
@@ -120,18 +122,20 @@
                             </table>
                         </td>
                     </table>
-                <p align="left">Outside of coding, my greatest skill is undoubtedly soccer. 
-                    I've been playing since I was 6. 
+                <p class="skillP">Outside of coding, my greatest skill is undoubtedly soccer. 
+                    I've been playing since I was 6. <br>
                     I love a good pick up game of soccer, but I also love competitive soccer.
                 </p>
             </div>
         </center>
             <hr>
+            <center>
             <div class="contact-me">
                 <h2>Get In Touch</h2>
-                <p>Got something that I can help with, or just want to say hi? Go ahead and hit me up. </p>
+                <p class="outroP">Got something that I can help with, or just want to say hi? Go ahead and hit me up. </p>
                 <a class="btn" href="mailto:joeymcm2019@email.com">CONTACT ME</a>
             </div>
+            </center>
         </div>
 
     </div>
