--- a/Site2/index.html
+++ b/Site2/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="bottom">
-        <p>Want to know more about me? Check out my <a class="footer-link"
+        <p class="pBottom">Want to know more about me? Check out my <a class="footer-link"
                 href="/cv/index.html">First
                 Website</a>. </p>
         <p id="lastP">© 2022 Joey McMahon.</p>
