--- a/Site2/index.html
+++ b/Site2/index.html
@@ -80,7 +80,7 @@
                             </td>
                         </tr>
                     </table>
-                    <p class="skillP">I used mainly C++ and Java in college. 
+                    <p class="skillP2">I used mainly C++ and Java in college. 
                         I've been focussing on html, javascript, and css.<br>
                         Looking to master these 3!
                     </p>
