--- a/Site2/graphicDesign.html
+++ b/Site2/graphicDesign.html
@@ -7,21 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h2>Graphic Design</h2>
-    <h3>A Few Examples</h3>
-    <hr>
-    <h3>Sunny River Farm Logo</h3>
+    <center>
+    <h1>Graphic Design</h1> <br><br><br>
     <img src="images/srfLogo.png">
+    <p>Sunny River Farm Logo</p>
     <hr>
-    <h3>Photoshop Project</h3>
-    <h4>(My younger brother as the subject)</h4>
+    <p>Photoshop Project <br>
+    (My younger brother as the subject)</p>
+   
     <img src="images/photoshop.jpg">
+
     
     <hr>
     <h3><a href="index.html">Home</a>
+    </center>
 </body>
 
 </html>
