--- a/Site2/photography.html
+++ b/Site2/photography.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Sacramento&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-    <h2>Photography</h2>
-    <h3>Several fun shots I've taken and edited</h3>
-    <hr>
+    <center>
+    <h1>Photography</h1>
     <h3>Sunset at Mt. Pisgah</h3>
     <img src="images/sunset.jpg">
     <h3>From the top of Spencer's Butte</h3>
     <img src="images/coolPhoto1.jpg">
     <h3>Long Exposure Shot with Fun Light Trick</h3>
     <img src="images/LongExposure.jpg">
-
     <hr>
     <h3><a href="index.html">Home</a>
+    </center>
 </body>
 </html>
