--- a/Site2/index.html
+++ b/Site2/index.html
@@ -34,18 +34,19 @@
             <img src="images/profilePicCircle3.png" alt="profile-pic-img">
             <h2>Hello</h2>
             <center>
-            <p class="skillP">One thing to know about me: <strong><em>I want to become a full-stack
-                        webdeveloper.</em></strong><br>
-                I am currently pursuing this goal with the help of a course on Udemy
-                (<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank">course
-                    link</a>).
-                </center>
-                <hr>
+                <p class="skillP">One thing to know about me: <strong><em>I want to become a full-stack
+                            webdeveloper.</em></strong><br>
+                    I am currently pursuing this goal with the help of a course on Udemy
+                    (<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
+                        target="_blank">course
+                        link</a>).
+            </center>
+            <hr>
             <div class="skills">
                 <center>
-                <h2>Skills</h2>
-                
-                <img src="images/coding.png" class="codeIMG">
+                    <h2>Skills</h2>
+
+                    <img src="images/coding.png" class="codeIMG">
                     <table class="table1">
                         <thead>
                         </thead>
@@ -80,11 +81,11 @@
                             </td>
                         </tr>
                     </table>
-                    <p class="skillP2">I used mainly C++ and Java in college. 
+                    <p class="skillP2">I used mainly C++ and Java in college.
                         I've been focussing on html, javascript, and css.<br>
                         Looking to master these 3!
                     </p>
-                <img src="images/soccerball.png" class="soccerIMG">
+                    <img src="images/soccerball.png" class="soccerIMG">
                     <table class="table2">
                         <td>
                             <table cellpadding="15">
@@ -122,30 +123,31 @@
                             </table>
                         </td>
                     </table>
-                <p class="skillP">Outside of coding, my greatest skill is undoubtedly soccer. 
-                    I've been playing since I was 6. <br>
-                    I love a good pick up game of soccer, but I also love competitive soccer.
-                </p>
-            </div>
-        </center>
-            <hr>
-            <center>
-            <div class="contact-me">
-                <h2>Get In Touch</h2>
-                <p class="outroP">Got something that I can help with, or just want to say hi? Go ahead and hit me up. </p>
-                <a class="btn" href="mailto:joeymcm2019@email.com">CONTACT ME</a>
+                    <p class="skillP">Outside of coding, my greatest skill is undoubtedly soccer.
+                        I've been playing since I was 6. <br>
+                        I love a good pick up game of soccer, but I also love competitive soccer.
+                    </p>
             </div>
             </center>
+            <hr>
+            <center>
+                <div class="contact-me">
+                    <h2>Get In Touch</h2>
+                    <p class="outroP">Got something that I can help with, or just want to say hi? Go ahead and hit me
+                        up. </p>
+                    <a class="btn" href="mailto:joeymcm2019@email.com">CONTACT ME</a>
+                </div>
+            </center>
         </div>
-
     </div>
-
-    <div class="bottom">
-        <p class="pBottom">Want to know more about me? Check out my <a class="footer-link"
-                href="/cv/index.html">First
-                Website</a>. </p>
-        <p id="lastP">© 2022 Joey McMahon.</p>
-    </div>
+        <div class="bottom">
+            <center>
+            <p class="pBottom">Want to know more about me? Check out my <a class="footer-link"
+                    href="/cv/index.html">First
+                    Website</a>. </p>
+            <p id="lastP">© 2022 Joey McMahon.</p>
+        </center>
+        </div>
 
 
 
