--- a/Site2/index.html
+++ b/Site2/index.html
@@ -31,8 +31,10 @@
 
     <div class="middle">
         <div>
-            <img src="images/profilePicCircle3.png" alt="profile-pic-img">
-            <h2>Hello</h2>
+            <center>
+            <img src="images/profilePicCircle3.png" alt="profile-pic-img" class="profilePic">
+            <h2 id="hello">Hello</h2>
+        </center>
             <center>
                 <p class="skillP">One thing to know about me: <strong><em>I want to become a full-stack
                             webdeveloper.</em></strong><br>
