--- a/knowledge.html
+++ b/knowledge.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
+
 <body>
-    <center>
-        <h1>HTML Knowledge Base</h1>
-        <h2>Review Material</h2>
-    </center>
+
+    <h1>HTML Knowledge Base</h1>
+    <h2>Review Material</h2>
+
     <left>
         <h3><a href="index.html">back</a>
     </left>
@@ -27,29 +28,23 @@
         This tag is used for creating headers on pages. Tags like this one have a beginning tag
         and an end tag (&lt;h1>, &lt;\h1> respectively). Some tags are self closing tags, meaning one should not use
         a close tag with these sort of tags. For example, &lt;br> creates a new line on the page, and requires no
-        closing
-        tag. This makes sense, since a line break doesn't really have a beginning and end. The computer just does it.
-        However, the computer needs to know when headers are finished, or really any tag which includes content or is
-        modifying content (eg. center). We have to tell when we're done.
+        closing tag. This makes sense, since a line break doesn't really have a beginning and end. The
+        computer just does it.
+        However, the computer needs to know when headers are finished, or really any tag which includes
+        content or is modifying content (eg. center). We have to tell the computer when we're done.
         <br><br>
-        The next piece to know about tags is that some of them have attributes. The header tags, for example, have the
-        attribute
-        allign, and can be utilized as follows: <br>
+        The next piece to know about tags is that some of them have attributes. The header tags, for
+        example, have the attribute allign, and can be utilized as follows: <br>
         &lth1 align="center">Hello World!&lt/h1> <br>
-        This creates the header, "Hello World", and centers it on the page. Attributes are useful for adding
-        customizations
-        to elements, thereby aiding in creating a certain page style and format.
+
+        This creates the header, "Hello World", and centers it on the page. Attributes are useful for
+        adding customizations to elements, thereby aiding in creating a certain page style and format.
         <br>
-        The examples here are quite limited; whereas the amount of tags and attributes needs to know in order to create
-        an
-        appealing site
-        are quite numerous. Fortunately, there are useful resources on the web that make finding pertinent information
-        much
-        easier
-        than trying to memorize it all. The following sites are quite handy for finding whatever one needs when coding a
-        webpage.
-        I'm liking devdocs a lot so far. I can find whatever I'm looking for by simply typing in the key term. Nice and
-        fast.
+        The examples here are quite limited; whereas the amount of tags and attributes needs to know in
+        order to create an appealing site are quite numerous. Fortunately, there are useful resources on the
+        web that make finding pertinen information much easier than trying to memorize it all. The following
+        sites are quite handy for finding whatever one needs when coding a webpage. I'm liking devdocs a lot
+        so far. I can find whatever I'm looking for by simply typing in the key term. Nice and fast.
         If all else fails, google has my back. Have to get that thrill of efficiency :)
         <br><br>
         <a href="https://www.w3schools.com/" target="_blank">w3schools</a>
@@ -82,24 +77,22 @@
     </p>
     <h2>Side Note</h2>
     <p>
-        Evidently, choosing which tag to use isn't as simple as one may think. When it comes to choosing the correct tag
-        for text content, for example, don't assume that just because your tag does what you want, that it is actually
-        accomplishing what you want. The tag i and the tag em both make their content italisized but em is actually
-        what tells browsers that the information is stressed. There is a semantic difference. See <a
-            href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/em" target="_blank">
-            i vs em.</a> The tag strong vs the tag b is another example. Both make the text bold, but their semantics
-        are
+        Evidently, choosing which tag to use isn't as simple as one may think. When it comes to choosing the
+        correct tag for text content, for example, don't assume that just because your tag does what you want,
+        that it is actually accomplishing what you want. The tag i and the tag em both make their content
+        italisized but em is actually what tells browsers that the information is stressed. There is a
+        semantic difference.
+        See <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/em" target="_blank">
+            i vs em.</a>
+        The tag strong vs the tag b is another example. Both make the text bold, but their semantics are
         different.
     </p>
     <h2>More Info</h2>
     <p>
-        &lt;ul> is used for unordered lists. In other words, bullet points. &lt;ol>, similarly, is used for ordered
-        lists.
-        Then,
-        for ul you use style="list-style-type:_____" and fill the blank with whatever attribute you'd like
-        (circle,disc,or
-        square).
-        For ol you use type and or start.
+        &lt;ul> is used for unordered lists. In other words, bullet points. &lt;ol>, similarly, is used for
+        ordered lists. Then, for ul you use style="list-style-type:_____" and fill the blank with whatever
+        attribute you'd like (circle,disc,or
+        square). For ol you use type and or start.
         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol" target="_blank">
             See Docoumentation (ol).
         </a>
@@ -107,7 +100,8 @@
         <br><br>
         <Strong>Example</Strong>
     </p>
-    <ul style="list-style-type:disc">
+    <p>
+    <ul style="list-style-type:disc" id="ul1">
         <li>ul.1</li>
         <ol type="cirlce">
             <li>ol.1</li>
@@ -117,7 +111,7 @@
         <li>ul.2</li>
         <li>ul.3</li>
     </ul>
-
+    </p>
     <hr>
 
     <h2>Chapter 2: Intermediate</h2>
@@ -146,7 +140,6 @@
     </ul>
 
     <p>
-
         The tag table creates the table. The tag tr creates a table row. The tag td creates a table cell/column.
         This is where one puts content into their table. You can create as many rows and columns as you like.
         First useful attribute I've learned about for tables is cellpadding which puts however much space one wants
@@ -166,15 +159,14 @@
         <strong>Label:</strong> this tag puts text on our page which we can use to label form elements such as
         a text box.
         <br><br>
-        <strong>Input:</strong> this tag can create an input space for the user, for text, or a click box, or other
-        types of inputs. The type atrribute for this tag has many possibilities.
+        <strong>Input:</strong> this tag can create an input space for the user, for text, or a click box, or
+        other types of inputs. The type atrribute for this tag has many possibilities.
         See <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input" target="_blank">MDN</a>
         <br>
 
-
         <strong>Example</strong>
 
-    <form class="" method="post">
+    <form class="form1" method="post">
         <label>Your Name</label></td>
         <input type="text" name="" value=""></td>
         <input type="submit">
@@ -219,8 +211,8 @@
 
     <p>
         Use the style tag to make modifications to all tags of your choice throughout your file. For example,
-        you can change all the hr tags at once, or all the table tags at once. Just use the style tag
-        to make the modifications you want to see for each instance of these elements.
+        you can change all the hr tags at once, or all the table tags at once. Just use the style tag to make
+        the modifications you want to see for each instance of these elements.
         <br><br>
         <strong>Example:</strong><br><br>
         &lt;style> <br>
@@ -273,16 +265,16 @@
         <strong>The class and id selectors</strong><br><br>
         Want to use different settings on the same tag? For example, want your h1 to be blue sometimes but other times
         have it be red? It's quite simple! But, BE WARNED! The id selector can only be used once per page! The class
-        selector,
-        on the other hand, can be used to modify as many tags as you want! See examples below for how to set these up:
+        selector, on the other hand, can be used to modify as many tags as you want! See examples below for how
+        to set these up:
         <br><br>
 
         class example: <br> &lt;h1 class="blueHeader"> <br>
         id example: <br> &lt;h1 id="blueHeader"> <br><br>
 
         These lines make it so this h1 will follow the CSS stylings set up for the class blueHeader. Now all we have
-        to do is add a little code to our style.css. Note the dot before the class label
-        and the # before the id label. This is important!!
+        to do is add a little code to our style.css. Note the dot before the class label and the # before the
+        id label. This is important!!
         See below: <br><br>
 
         class example: <br>
@@ -311,9 +303,10 @@
         <strong>NOTE:</strong> you cannot have multiple id selectors for a tag. <br><br>
 
         <strong>Psuedo Classes</strong><br><br>
-        Psuedo Classes are used when you want to affect an element when it's in a different state. Yes, elements have
-        different states. For example, when a user <strong><em>hovers</em></strong> over an element with their mouse,
-        this puts that element in a different state. Thus, html has a hover state. See example below for how to use:
+        Psuedo Classes are used when you want to affect an element when it's in a different state. Yes,
+        elements have different states. For example, when a user <strong><em>hovers</em></strong> over an
+        element with their mouse, this puts that element in a different state. Thus, html has a hover state.
+        See example below for how to use:
         <br><br>
 
         In our style.css:<br>
@@ -337,20 +330,17 @@
 
     <h3>Box model</h3>
     <p>
-        One can look at html elements as boxes. Each of these boxes has certain properties that are useful to know and
-        that
-        one can change to create the design one desires. See below:
+        One can look at html elements as boxes. Each of these boxes has certain properties that are useful to
+        know and that one can change to create the design one desires. See below:
         <br><br>
         <img src="images/boxModel.jpg">
         <br><br>
         The blue section in the middle is the content. It has a height and width. Then there's the padding, border, and
-        margin
-        properties. Each of these properties has a top, bottom, left, and right value.
+        margin properties. Each of these properties has a top, bottom, left, and right value.
         <br><br>
         <strong>padding:</strong> space between content and the border of the container element (div, for example).
         Padding increases the size of the container element. This is because it expands the space around the content
-        area.
-        The content area is just the defualt size of the container.
+        area. The content area is just the defualt size of the container.
         <br><br>
         <strong>border:</strong> space around container. This adds to the total size of the container. For example,
         if a container is 100px wide but has a 20px border, its total width will be 140px (20px border-left + 20px
@@ -429,16 +419,15 @@
         1. Static: default html setting for all elements. Keep to default html flow<br><br>
         2. Relative: positions an element relative to default position using top,
         bottom, left, and right values/coordinates. Note left actually moves the element right,
-        and vice versa. Top moves element down, bottom moves element up. <strong>NOTE: <em>
-                this doesn't effect the position of anything else on screen, </em></strong> as if the element was still
-        in its <em><strong>original position.</strong></em>
+        and vice versa. Top moves element down, bottom moves element up.
+        <strong>NOTE: <em> this doesn't effect the position of anything else on screen, </em></strong>
+        as if the element was still in its <em><strong>original position.</strong></em>
         <br><br>
         3. Absolute: positions an element relative to its parent. The right value distances an element from the right
         ending side of its parent. The left its left. The top its top. The bottom its bottom. Essentially adds
         a margin to the parent element. <strong>NOTE: </strong>absolute positioning <strong><em>affects html flow.</em>
         </strong> The element is <strong><em>no longer </em></strong>apart of the natural flow of the document. It's as
-        if
-        the element doesn't exist to the rest of the page.
+        if the element doesn't exist to the rest of the page.
         <br><br>
         4. Fixed: positions an element relative to the page, keeping its position the same regardless of scrolling.
         Useful for nav bar. Top, bottom, left right work the same as with absolute positioning.
@@ -451,10 +440,9 @@
         Use <strong>text-align: center</strong> within the parent class to center text elements within the
         parent element. I like this method the most for centering text. The other way is to use
         <strong>margin: 0 auto</strong> for the text element. This sets the margin for the top & bottom to 0, while
-        setting the margins for left and right automatically, and such that the text is centered. <strong>Note:</strong>
-        The problem with this is that it centers the text based on the width of text element rather than the text
-        itself.
-        Therefore, it's less accurate. You can use relative positioning, however, to help with this. You can also
+        setting the margins for left and right automatically, and such that the text is centered.
+         <strong>Note:</strong> The problem with this is that it centers the text based on the width of text element rather than the text
+        itself. Therefore, it's less accurate. You can use relative positioning, however, to help with this. You can also
         use the center tag to horizontally center any elements you wish. I think this is a pretty good method.
         You can also use <strong>vertical-align: center</strong> to center an element. I need to test this one more.
         <br><br>
@@ -464,13 +452,13 @@
             target="_blank">cssfontstack.com</a><br>
         <a href="https://fonts.google.com/?adlt=strict&toWww=1&redig=7CCC2D06066548F8B271E74DA61474D4&safe=active"
             target="_blank">google fonts</a><br><br>
+
         Google fonts is nice because you can easily embed the fonts you want. They give you the code to add
         to index.html.
-
         <br><br>
+
         More useful positioning attributes:<br><br>
-        <strong>float: </strong> value can either be set to left or right. Takes the next element and puts
-        it on the same line. Useful for "floating" text next to an image. <br><br>
+        <strong>float: </strong> value can either be set to left or right. Takes the next element and puts it on the same line. Useful for "floating" text next to an image. <br><br>
         <strong>clear:</strong> basically the opposite of float. value either set to left or right, but clear
         ensures that nothing is to the left or right of an element. Prevents text from being wrapped around images.
     </p>
@@ -482,5 +470,6 @@
     <hr>
     <h3><a href="index.html">Home</a>
 </body>
+
 
 </html>
