--- a/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
+++ b/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-<!--bootstrap-->
+  <!--bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<!--google fonts-->
+  <!--google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 
   <!--bootstrap-->
@@ -23,11 +24,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    <!--font awesome-->
-    <script src="https://kit.fontawesome.com/7d16af8cbf.js" crossorigin="anonymous"></script>
+  <!--font awesome-->
+  <script src="https://kit.fontawesome.com/7d16af8cbf.js" crossorigin="anonymous"></script>
 
-    <!--my style sheet. Purposefully last-->
-    <link rel="stylesheet" href="css/styles.css">
+  <!--my style sheet. Purposefully last-->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Tindog</a>
+        <a class="navbar-brand" href="">tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -61,18 +62,21 @@
       <!-- Title -->
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6" style="margin-bottom: 0%; margin-top: 10%;">
           <h1 id="head1">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg">Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg">Download</button>
+          <button type="button" class="btn btn-dark btn-lg dlBtn"><i class="fa-brands fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg dlBtn"><i class="fa-brands fa-google-play"></i>
+            Download</button>
         </div>
 
-        <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+        <div class="col-lg-6" style="height: 550px;">
+          <img src="images/iphone6.png" alt="iphone-mockup" class="phone" 
+          style="position: absolute; margin-top: 20%;">
         </div>
 
       </div>
     </div>
+  
 
   </section>
 
@@ -81,14 +85,30 @@
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <!--col-md-4 must be included for proper function-->
+    <div class="row">
+      <div class="col-lg-4 col-md-4 col-sm-12">
+        <h3 class="h3features">
+          <i class="fa-solid fa-circle-check featureIcon"></i><br>
+          Easy to use
+        </h3>
+        <p class="pfeatures">So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+        <h3 class="h3features">
+          <i class="fa-solid fa-bullseye featureIcon"></i><br>
+          Elite Clientele
+        </h3>
+        <p class="pfeatures">We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+        <h3 class="h3features">
+          <i class="fa-solid fa-heart featureIcon"></i><br>
+          Guaranteed to work
+        </h3>
+        <p class="pfeatures">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
   </section>
 
@@ -97,9 +117,36 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+
+
+    <div id="testCarousel" class="carousel slide" data-ride="false">
+      <div class="carousel-inner" style="background-color: #ff4c68;">
+        <div class="carousel-item active">
+          <h2 id="h2test">I no longer have to sniff other dogs for love. I've found the hottest Corgi on tindog. Woof.
+          </h2>
+          <img src="images/dog-img.jpg" id="testIMG" alt="dog-profile" style="padding: 0 5%">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 id="h2test">Love at first sniff. My dog used to be so lonely. Not anymore. So happy!</h2>
+          <img src="images/lady-img.jpg" id="testIMG" alt="dog-profile" style="padding: 0 5%">
+          <em>Jenny, California</em>
+        </div>
+        <div class="carousel-item">
+          <h2 id="h2test">Ay chihuahua! Have you seen the chihuahuas?! I found the cutest one!</h2>
+          <img src="images/tindog2.jpg" id="testIMG" alt="dog-profile" style="padding: 0 5%">
+          <em>Teddy, Oregon</em>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#testCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#testCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
@@ -111,45 +158,84 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+
+    <div class="row" style="text-align: center;">
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/techcrunch.png" alt="tc-logo" class="pressIMG">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/tnw.png" alt="tnw-logo" class="pressIMG">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/bizinsider.png" alt="biz-insider-logo" class="pressIMG">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="images/mashable.png" alt="mashable-logo" class="pressIMG">
+      </div>
+    </div>
 
   </section>
 
 
   <!-- Pricing -->
 
+
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2 id="h2Price">A Plan for Every Dog's Needs</h2>
+    <p id="pPrice">Simple and affordable price plans for your and your dog</p>
 
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="cardH3text">Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2 style="padding-bottom: 3%;">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="btn-lg btn-block btn-dark btnCustom">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 style="padding-bottom: 3%;">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="btn-lg btn-block btn-dark btnCustom">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="btn-lg btn-block btn-dark btnCustom">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </section>
 
