--- a/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
+++ b/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
@@ -70,13 +70,12 @@
         </div>
 
         <div class="col-lg-6" style="height: 550px;">
-          <img src="images/iphone6.png" alt="iphone-mockup" class="phone" 
-          style="position: absolute; margin-top: 20%;">
+          <img src="images/iphone6.png" alt="iphone-mockup" class="phone">
         </div>
 
       </div>
     </div>
-  
+
 
   </section>
 
@@ -244,20 +243,23 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3>Find the True Love of Your Dog's Life Today</h3>
+    <button type="button" class="btn btn-dark btn-lg bottomDownload"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg bottomDownload"><i class="fa-brands fa-google-play"></i>
+      Download</button>
+
+    <footer id="footer">
+
+      <p>© Copyright TinDog</p>
+
+    </footer>
+
 
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <p>© Copyright TinDog</p>
-
-  </footer>
 
 
 </body>
