--- a/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
+++ b/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
@@ -69,7 +69,7 @@
             Download</button>
         </div>
 
-        <div class="col-lg-6" style="height: 550px;">
+        <div class="col-lg-6">
           <img src="images/iphone6.png" alt="iphone-mockup" class="phone">
         </div>
 
