--- a/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
+++ b/bootstrap/TinDog-Start-master/TinDog-Start-master/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>tindog</title>
   <!--bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -243,19 +243,23 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today</h3>
+    <h3 style="font-weight:700; margin-bottom: 2.5%; font-size: 35px">Find the True Love of Your Dog's Life Today</h3>
     <button type="button" class="btn btn-dark btn-lg bottomDownload"><i class="fa-brands fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg bottomDownload"><i class="fa-brands fa-google-play"></i>
       Download</button>
 
-    <footer id="footer">
-
-      <p>© Copyright TinDog</p>
-
-    </footer>
 
 
   </section>
+
+  <footer id="footer">
+
+    <i class="fa-brands fa-twitter iconBottom"></i><i class="fa-brands fa-facebook-f iconBottom"></i>
+    <i class="fa-brands fa-instagram iconBottom"></i><i class="fa-solid fa-envelope iconBottom"></i>
+    <p>© Copyright TinDog</p>
+
+  </footer>
+
 
 
   <!-- Footer -->
